--- a/firebase.json
+++ b/firebase.json
@@ -22,7 +22,7 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
+      "npm --prefix $Env:RESOURCE_DIR run lint"
     ]
   }
 }
